--- a/views/result.ejs
+++ b/views/result.ejs
@@ -232,5 +232,9 @@
             settings.style.display = settings.style.display === "block" ? "none" : "block";
         }
     </script>
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+      </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
