--- a/views/result.ejs
+++ b/views/result.ejs
@@ -62,9 +62,10 @@
             padding: 0.3rem 0.5rem;
             border: 1px solid #f0f0f0;
             border-radius: 4px;
-            width: 100%;
+            width: calc(100% - 4px); /* Adjusted width to align with the image */
             background: #070707;
             color: #f0f0f0;
+            box-sizing: border-box; /* Include padding and border in width calculation */
         }
 
         input[type="text"]::placeholder {
