updated results page

--- a/views/result.ejs
+++ b/views/result.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> <!-- Added user-scalable=no -->
     <title>I Dream of Electric Tweaks</title>
     <style>
         /* General Styles */
@@ -235,7 +235,7 @@
     </script>
     <script>
         window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-      </script>
+    </script>
     <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
