--- a/views/index.ejs
+++ b/views/index.ejs
@@ -234,6 +234,15 @@
             text-overflow: ellipsis;
             max-width: 100%;
         }
+        
+        /* Credit line style */
+        .credit-line {
+            font-size: 0.7rem;
+            color: #999;
+            text-align: center;
+            margin-top: 1rem;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
@@ -273,6 +282,9 @@
 
             <!-- Submit Button -->
             <button type="submit" id="generate-button">Generate</button>
+            
+            <!-- Credit Line -->
+            <div class="credit-line">Made with 🪽❤️ by Colin McDonnell</div>
         </form>
 
         <!-- Loading Overlay -->
