--- a/views/result.ejs
+++ b/views/result.ejs
@@ -185,7 +185,7 @@
 <body>
     <div class="container">
         <h1>Red Bull Doodles Generator</h1>
-        <form id="generate-form" action="/generate" method="POST">
+        <form id="generate-form" action="/generate" method="POST" enctype="multipart/form-data">
             <!-- Generated Image -->
             <img src="<%= imageUrl %>" alt="Generated Image" id="generated-image">
             
