Remove Red Bull branding from login page and titles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Red Bull Doodles Generator</title>
+    <title>Doodle Generator</title>
     <style>
         /* General Styles */
         body {
@@ -247,7 +247,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Red Bull Doodles Generator</h1>
+        <h1>Doodle Generator</h1>
         <form id="generate-form" action="/generate" method="POST" enctype="multipart/form-data">
             <img src="https://res.cloudinary.com/dvz9gbvc9/image/upload/v1743054598/can_edit_1_yvaznk.png" alt="Red Bull Doodles Example" id="example-image">
             
