--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Login - Red Bull Doodles Generator</title>
+    <title>Doodle Generator Login</title>
     <style>
         /* General Styles */
         body {
@@ -125,8 +125,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Red Bull Doodles Generator</h1>
-        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f4/Red_Bull_logo.svg/1200px-Red_Bull_logo.svg.png" alt="Red Bull Logo" class="logo">
+        <h1>Doodle Generator Login</h1>
         
         <form action="/login" method="POST">
             <div class="form-group">
