--- a/views/result.ejs
+++ b/views/result.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Red Bull Doodles Generator</title>
+    <title>Doodle Generator</title>
     <style>
         /* General Styles */
         body {
@@ -184,7 +184,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Red Bull Doodles Generator</h1>
+        <h1>Doodle Generator</h1>
         <form id="generate-form" action="/generate" method="POST" enctype="multipart/form-data">
             <!-- Generated Image -->
             <img src="<%= imageUrl %>" alt="Generated Image" id="generated-image">
