--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Error - Red Bull Doodles Generator</title>
+    <title>Error - Doodle Generator</title>
     <style>
         /* General Styles */
         body {
